add twitter meta info

--- a/en/index.html
+++ b/en/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Azat Kashapov</title>
-    <meta name="description" content="Azat Kashapov's professional portfolio - an experienced Software Engineer specializing in Frontend technologies including Vue, TypeScript, and Tailwind CSS. Discover my skills, projects, and work history in developing high-quality web applications and solutions.">
+    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <meta
+      name="description"
+      content="Azat Kashapov's professional portfolio - an experienced Software Engineer specializing in Frontend technologies including Vue, TypeScript, and Tailwind CSS. Discover my skills, projects, and work history in developing high-quality web applications and solutions."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Azat Kashapov - Frontend Engineer" />
     <meta property="og:type" content="profile" />
@@ -19,10 +25,21 @@
     <meta property="og:locale" content="en_EN" />
     <meta property="profile:first_name" content="Azat" />
     <meta property="profile:last_name" content="Kashapov" />
-    <link rel="apple-touch-icon" href="icon.png" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="stylesheet" href="../css/main.css" />
+
     <meta name="theme-color" content="#fafafa" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@ufaboy" />
+    <meta name="twitter:url" content="https://ufaboy.github.io" />
+    <meta name="twitter:title" content="Azat Kashapov - Frontend Engineer" />
+    <meta
+      name="twitter:description"
+      content="Experienced Frontend developer specializing in Vue and Nuxt."
+    />
+    <meta
+      name="twitter:image"
+      content="https://ufaboy.github.io/img/avatar.png"
+    />
+    <meta name="twitter:image:alt" content="Azat Kashapov" />
   </head>
 
   <body>
