--- a/index.html
+++ b/index.html
@@ -1,30 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en" itemtype="https://schema.org/Person">
+  <head>
+    <meta charset="utf-8" />
+    <title>Azat Kashapov</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <meta
+      name="description"
+      content="Azat Kashapov's professional portfolio - an experienced Software Engineer specializing in Frontend technologies including Vue, TypeScript, and Tailwind CSS. Discover my skills, projects, and work history in developing high-quality web applications and solutions."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Azat Kashapov - Frontend Engineer" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://ufaboy.github.io" />
+    <meta
+      property="og:image"
+      content="https://ufaboy.github.io/img/avatar.png"
+    />
+    <meta
+      property="og:description"
+      content="Experienced Frontend developer specializing in Vue and Nuxt."
+    />
+    <meta property="og:locale" content="en_EN" />
+    <meta property="profile:first_name" content="Azat" />
+    <meta property="profile:last_name" content="Kashapov" />
+    <meta name="theme-color" content="#fafafa" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@ufaboy" />
+    <meta name="twitter:url" content="https://ufaboy.github.io" />
+    <meta name="twitter:title" content="Azat Kashapov - Frontend Engineer" />
+    <meta
+      name="twitter:description"
+      content="Experienced Frontend developer specializing in Vue and Nuxt."
+    />
+    <meta
+      name="twitter:image"
+      content="https://ufaboy.github.io/img/avatar.png"
+    />
+    <meta name="twitter:image:alt" content="Azat Kashapov" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Azat Kashapov</title>
-  <meta name="description" content="Azat Kashapov's professional portfolio - an experienced Software Engineer specializing in Frontend technologies including Vue, TypeScript, and Tailwind CSS. Discover my skills, projects, and work history in developing high-quality web applications and solutions.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="Azat Kashapov - Frontend Engineer" />
-  <meta property="og:type" content="profile" />
-  <meta property="og:url" content="https://ufaboy.github.io" />
-  <meta property="og:image" content="https://ufaboy.github.io/img//avatar.png"/>
-  <meta property="og:description" content="Experienced Frontend developer specializing in Vue and Nuxt."/>
-  <meta property="og:locale" content="en_EN" />
-  <meta property="profile:first_name" content="Azat" />
-  <meta property="profile:last_name" content="Kashapov" />
-  <link rel="stylesheet" href="css/main.css">
-  <meta name="theme-color" content="#fafafa">
-</head>
-
-<body>
-  <script>
-    if (navigator.language.startsWith('ru')) {
+  <body>
+    <script>
+      if (navigator.language.startsWith('ru')) {
         window.location.href = 'ru';
-    } else {
+      } else {
         window.location.href = 'en';
-    }
-  </script>
-</body>
+      }
+    </script>
+  </body>
 </html>
