--- a/ru/index.html
+++ b/ru/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Азат Кашапов</title>
-    <meta name="description" content="Профессиональное портфолио Азата Кашапова - опытного инженера-программиста, специализирующегося на фронтенд технологиях, включая Vue, TypeScript и Tailwind CSS. Ознакомьтесь с моими навыками, проектами и опытом работы в разработке качественных веб-приложений и решений.">
+    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <meta
+      name="description"
+      content="Профессиональное портфолио Азата Кашапова - опытного инженера-программиста, специализирующегося на фронтенд технологиях, включая Vue, TypeScript и Tailwind CSS. Ознакомьтесь с моими навыками, проектами и опытом работы в разработке качественных веб-приложений и решений."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Азат Кашапов - Frontend Engineer" />
     <meta property="og:type" content="profile" />
@@ -19,10 +25,20 @@
     <meta property="og:locale" content="ru_RU" />
     <meta property="profile:first_name" content="Азат" />
     <meta property="profile:last_name" content="Кашапов" />
-    <link rel="apple-touch-icon" href="icon.png" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="stylesheet" href="../css/main.css" />
     <meta name="theme-color" content="#fafafa" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@ufaboy" />
+    <meta name="twitter:url" content="https://ufaboy.github.io" />
+    <meta name="twitter:title" content="Азат Кашапов - Frontend Engineer" />
+    <meta
+      name="twitter:description"
+      content="Опытный Frontend разработчик, специализирующийся на Vue и Nuxt."
+    />
+    <meta
+      name="twitter:image"
+      content="https://ufaboy.github.io/img/avatar.png"
+    />
+    <meta name="twitter:image:alt" content="Азат Кашапов" />
   </head>
 
   <body>
