--- a/ru/index.html
+++ b/ru/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://ufaboy.github.io" />
     <meta
       property="og:image"
-      content="https://ufaboy.github.io/img/avatar.png"
+      content="https://ufaboy.github.io/img/avatar.webp"
     />
     <meta
       property="og:description"
@@ -36,7 +36,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://ufaboy.github.io/img/avatar.png"
+      content="https://ufaboy.github.io/img/avatar.webp"
     />
     <meta name="twitter:image:alt" content="Азат Кашапов" />
   </head>
@@ -46,7 +46,7 @@
       <section class="bio">
         <figure class="profile">
           <img
-            src="/img/avatar.png"
+            src="/img/avatar.webp"
             alt="Azat Kashapov's Photo"
             class="profile-photo"
           />
