--- a/en/index.html
+++ b/en/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://ufaboy.github.io" />
     <meta
       property="og:image"
-      content="https://ufaboy.github.io/img//avatar.png"
+      content="https://ufaboy.github.io/img/avatar.webp"
     />
     <meta
       property="og:description"
@@ -37,7 +37,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://ufaboy.github.io/img/avatar.png"
+      content="https://ufaboy.github.io/img/avatar.webp"
     />
     <meta name="twitter:image:alt" content="Azat Kashapov" />
   </head>
@@ -47,7 +47,7 @@
       <section class="bio">
         <figure class="profile">
           <img
-            src="/img/avatar.png"
+            src="/img/avatar.webp"
             alt="Azat Kashapov's Photo"
             class="profile-photo"
           />
