--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://ufaboy.github.io" />
     <meta
       property="og:image"
-      content="https://ufaboy.github.io/img/avatar.png"
+      content="https://ufaboy.github.io/img/avatar.webp"
     />
     <meta
       property="og:description"
@@ -34,7 +34,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://ufaboy.github.io/img/avatar.png"
+      content="https://ufaboy.github.io/img/avatar.webp"
     />
     <meta name="twitter:image:alt" content="Azat Kashapov" />
   </head>
